--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   --custom-border-radius: 5px;
   --custom-spacing: 5px;
 
-   background-image: url("https://d500.epimg.net/cincodias/imagenes/2021/03/10/lifestyle/1615368649_313875_1615368765_noticia_normal.jpg");
+   background-image: url("https://media.istockphoto.com/vectors/reminders-internet-communication-technology-dark-buttons-background-vector-id978658878?s=2048x2048");
   background-size: cover;
   background-repeat: none;
   min-height: 100vh;  
